# qtNodeEditor

./: CMakeLists.txt  README.md
include/forms/: edge.hpp  exports.hpp  mainWindow.hpp  node.hpp  sceneWidget.hpp
src/app/: CMakeLists.txt  app.cpp  mainWindow.cpp  mainWindow.hpp  mainWindow.ui
src/core/: CMakeLists.txt  lib.cpp  lib.hpp
src/forms/: CMakeLists.txt  edge.cpp  edge.hpp  mainWindow.cpp  mainWindow.ui  node.cpp  node.hpp  nodeConnection.cpp  nodeConnection.hpp  sceneWidget.cpp
